fix for "Missing sort/unsort icon in grid feature chooser" and "Icons in feature chooser are not visible in infragistics2012 theme"

--- a/src/css/structure/modules/infragistics.ui.grid.css
+++ b/src/css/structure/modules/infragistics.ui.grid.css
@@ -254,9 +254,6 @@ a.ui-iggrid-pagelink, a.ui-iggrid-pagelinkcurrent {
     margin : 0 0.1em;
 }
 
-.ui-iggrid-colindicator { /* padding-right: 4px;*/
-}
-
 .ui-iggrid .ui-iggrid-filterbutton {
     float : left;
 }
@@ -1795,7 +1792,7 @@ td.ui-iggrid-addrow {
     filter  : alpha(opacity=60);
 }
 
-.ui-iggrid-featurechooser-list .item-selected .ui-icon, .ui-iggrid-hiding-dropdown-list .item-selected .ui-icon, .ui-iggrid-columnmoving-dropdown-list .item-selected .ui-icon {
+.ui-iggrid-hiding-dropdown-list .item-selected .ui-icon, .ui-iggrid-columnmoving-dropdown-list .item-selected .ui-icon {
     opacity : 1;
     filter  : alpha(opacity=100);
 }
@@ -1805,7 +1802,8 @@ td.ui-iggrid-addrow {
     white-space : normal;
 }
 
-.ui-iggrid-featurechooser-list .item-selected .ui-iggrid-featurechooserddlistitemtext, .ui-iggrid-hiding-dropdown-list .item-selected .ui-iggrid-hiding-dropdown-ddlistitemtext, .ui-iggrid-columnmoving-dropdown-list .item-selected .ui-iggrid-columnmoving-dropdown-ddlistitemtext {
+.ui-iggrid-hiding-dropdown-list .item-selected .ui-iggrid-hiding-dropdown-ddlistitemtext,
+.ui-iggrid-columnmoving-dropdown-list .item-selected .ui-iggrid-columnmoving-dropdown-ddlistitemtext {
     font-weight : bold;
 }
 
